@@ -3,6 +3,8 @@ pyroscope (0.3.10) hardy; urgency=low
   * New "hashcheck" tool to check data against existing torrent file
   * rtcontrol: New option "--tee-view" to ADDITIONALLY show search
     results in ncurses view (modifies -V and --to-view behaviour)
+  * rtcontrol: Prefix "--sort-fields" names with a '-' to get 
+    descending order for that field only
 
  -- pyroscope <pyroscope.project@gmail.com>  Sun, 14 Nov 2010 10:27:51 +0100
 
